--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -6,11 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content {
+            flex: 1;
+        }
+
+        @keyframes heartBeat {
+            0% {
+                transform: scale(1);
+            }
+
+            50% {
+                transform: scale(1.3);
+            }
+
+            100% {
+                transform: scale(1);
+            }
+        }
+
+        .heartBeatAnimation {
+            animation: heartBeat 0.5s;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="index.html">eCommerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -22,9 +57,6 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="">Profile</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="">Cart</a>
                     </li>
                 </ul>
 
@@ -52,7 +84,18 @@
                         </div>
                         <input class="form-control me-2" type="search" id="search_query" placeholder="Search products"
                             aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit" id="search_button">Search</button>
+                        <button class="btn btn-outline-success d-flex align-items-center" type="submit"
+                            id="search_button">
+                            <i class="bi bi-search" style="margin-right: 8px;"></i>
+                            Search
+                        </button>
+
+                        <button class="btn btn-outline-dark d-flex align-items-center" style="margin-left: 8px;"
+                            type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </button>
                     </form>
                 </div>
             </div>
@@ -66,7 +109,7 @@
                     <img id="product_image" class="shadow-sm rounded img-fluid w-100 fit-cover"
                         style="object-fit: contain; min-height: 300px;"></img>
                     <div style="max-width: 350;">
-                        <a>⭐</a>
+                        <i class="bi bi-star-fill"></i>
                         <a id="product_rating"></a>
                     </div>
                 </div>
@@ -77,17 +120,36 @@
                     <h2 id="product_name" class="text-uppercase fw-bold"></h2>
                     <span id="product_price" class="badge rounded-pill text-bg-success"></span>
                     <a id="product_stock"></a>
-                    <p id="product_description" class="my-3"></p>
-                    <a id="product_add_to_cart" class="btn btn-primary btn-lg me-2 shadow-sm" role="button" href="">Add
-                        to
-                        Cart</a>
-                    <a id="product_wishlist" class="btn btn-outline-danger btn-lg shadow-sm" role="button"
-                        href="">❤️</a>
+
+                    <div class="col-md-12" style="margin-top: 32px; margin-bottom: 38px;">
+                        <div>
+                            <h5>About this product</h5>
+                            <p id="product_description" class="my-3"></p>
+                        </div>
+                    </div>
+
+                    <a id="product_add_to_cart" class="btn btn-primary btn-lg me-2 shadow-sm" role="button" href="">
+                        <i class="bi bi-cart-plus-fill"></i>
+                        Add to Cart
+                    </a>
+                    <a id="product_wishlist" class="btn btn-outline-danger btn-lg shadow-sm" role="button" href="">
+                        <i class="bi bi-heart-fill"></i>
+                    </a>
                     <a id="product_sales" style="margin-left: 8px;"></a>
                 </div>
             </div>
         </div>
     </div>
+
+    <footer class="py-5 bg-dark mt-auto" style="height:fit-content;">
+        <div class="container">
+            <p class="m-0 text-center text-white">© (G3) eCommerce Product Module 2023. All rights left. Unauthorized
+                copying of
+                this project is not only frowned upon but also punishable by being forced to listen to elevator music
+                for an entire day. Seriously, we worked hard on this – don't make us unleash the music of torture!
+            </p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -97,7 +159,7 @@
         }
     </script>
 
-    <script src="js/view.js"></script>
+    <script type="module" src="js/view.js"></script>
 </body>
 
 </html>
