--- a/frontend/src/product-search.html
+++ b/frontend/src/product-search.html
@@ -7,11 +7,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+
+        .content {
+            flex: 1;
+        }
+    </style>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container px-4 px-lg-5">
             <a class="navbar-brand" href="index.html">eCommerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -23,9 +39,6 @@
                 <ul class="navbar-nav">
                     <li class="nav-item active">
                         <a class="nav-link" href="">Profile</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="">Cart</a>
                     </li>
                 </ul>
 
@@ -53,17 +66,38 @@
                         </div>
                         <input class="form-control me-2" type="search" id="search_query" placeholder="Search products"
                             aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit" id="search_button">Search</button>
+                        <button class="btn btn-outline-success d-flex align-items-center" type="submit"
+                            id="search_button">
+                            <i class="bi bi-search" style="margin-right: 8px;"></i>
+                            Search
+                        </button>
+
+                        <button class="btn btn-outline-dark d-flex align-items-center" style="margin-left: 8px;"
+                            type="submit">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        </button>
                     </form>
                 </div>
             </div>
         </div>
     </nav>
 
-    <h2 style="margin-top: 86px; text-align: center;" id="search_status"></h2>
+    <h2 style="margin-top: 32px; text-align: center;" id="search_status"></h2>
 
     <div class="product-list" id="product_container"
         style="padding: 20px; display: flex; flex-wrap: wrap; justify-content: center;"></div>
+
+    <footer class="py-5 bg-dark mt-auto" style="height:fit-content;">
+        <div class="container">
+            <p class="m-0 text-center text-white">© (G3) eCommerce Product Module 2023. All rights left. Unauthorized
+                copying of
+                this project is not only frowned upon but also punishable by being forced to listen to elevator music
+                for an entire day. Seriously, we worked hard on this – don't make us unleash the music of torture!
+            </p>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
