--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -62,6 +62,8 @@
                                 <a class="dropdown-item" href="#" onclick="changeDropdownText(this)">Furniture</a>
                                 <a class="dropdown-item" href="#" onclick="changeDropdownText(this)">Kitchen</a>
                                 <a class="dropdown-item" href="#" onclick="changeDropdownText(this)">Outdoor</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#" onclick="changeDropdownText(this)">Other</a>
                             </div>
                         </div>
                         <input class="form-control me-2" type="search" id="search_query" placeholder="Search products"
@@ -73,7 +75,7 @@
                         </button>
 
                         <button class="btn btn-outline-dark d-flex align-items-center" style="margin-left: 8px;"
-                            type="submit">
+                            type="submit" disabled>
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
