Make items low on stock visible

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -23,6 +23,12 @@
             flex: 1;
         }
 
+        .low-stock {
+            color: red;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
         @keyframes heartBeat {
             0% {
                 transform: scale(1);
