Disable "add to cart" for products with zero stock/price

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -29,6 +29,12 @@
             font-weight: bold;
         }
 
+        .gray-out {
+            color: #6c757d;
+            opacity: 0.5;
+            cursor: not-allowed;
+        }
+
         @keyframes heartBeat {
             0% {
                 transform: scale(1);
