fix 404 page layout

--- a/frontend/src/404.html
+++ b/frontend/src/404.html
@@ -27,7 +27,7 @@
 
 <body>
     <img src="https://media.tenor.com/x7YhM61cvC4AAAAC/there's-nothing-we-can-do.gif"
-        style="padding: 8px; object-fit: contain;">
+        style="padding: 8px; object-fit: contain; max-height: 348px;">
 
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="container text-center">
