Query current page number within the URL params

--- a/frontend/src/404.html
+++ b/frontend/src/404.html
@@ -43,7 +43,7 @@
 
     <script>
         function returnHome() {
-            window.location.href = "index.html";
+            window.location.href = "index.html?page=1";
         }
     </script>
 
