--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -187,7 +187,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="index.html">eCommerce</a>
+            <a class="navbar-brand" href="index.html?page=1">eCommerce</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
