Display categories in product views

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -264,6 +264,10 @@
                     <span id="product_price" class="badge rounded-pill text-bg-success"></span>
                     <a id="product_stock"></a>
 
+                    <div>
+                        <span id="product_category" class="badge rounded-pill bg-dark"></span>
+                    </div>
+
                     <div class="col-md-12" style="margin-top: 32px; margin-bottom: 38px;">
                         <div>
                             <h5>About this product</h5>
