Tweak 404 page layout

--- a/frontend/src/404.html
+++ b/frontend/src/404.html
@@ -27,9 +27,9 @@
 
 <body>
     <img src="https://media.tenor.com/x7YhM61cvC4AAAAC/there's-nothing-we-can-do.gif"
-        style="padding: 8px; object-fit: contain; max-height: 348px;">
+        style="padding: 16px; object-fit: contain; max-height: 256px;">
 
-    <div class="d-flex justify-content-center align-items-center vh-100">
+    <div class="d-flex justify-content-center align-items-center vh-100" style="padding: 16px;">
         <div class="container text-center">
             <h1 class="fw-bold" style="padding-bottom: 16px;">404 Not Found</h1>
             <p>🏝️ So, here we are, stuck on a stranded island, no ships are found around us,</p>
