--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -28,7 +28,9 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="index.html?page=1">eCommerce</a>
+            <a class="navbar-brand" href="index.html?page=1">
+                <img src="https://cdn.discordapp.com/attachments/899668201066094633/1173375949488799834/logo.png?ex=6563ba82&is=65514582&hm=611d9984dbf82609ebd3f972654dabcffd1f8b4ee24613298e9b196161f423a9&" width="64">
+            </a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
