--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -60,14 +60,14 @@
             height: 50px;
             border: 0;
             border-radius: 10px;
-            background-color: #4834d4;
+            background-color: #d45934;
             outline: none;
             cursor: pointer;
             color: #fff;
         }
 
         .cart-button:hover {
-            background-color: #35269b;
+            background-color: #bd4a27;
         }
 
         .cart-button:active {
