Display "Selling out fast" in product view page

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -24,9 +24,10 @@
         }
 
         .low-stock {
-            color: red;
+            color: rgb(255, 42, 42);
             text-decoration: none;
             font-weight: bold;
+            font-size: smaller;
         }
 
         .gray-out {
@@ -268,6 +269,7 @@
 
                     <div>
                         <span id="product_category" class="badge rounded-pill bg-dark"></span>
+                        <span id="product_status" class="badge rounded-pill bg-warning text-dark">Selling out fast</span>
                     </div>
 
                     <div class="col-md-12" style="margin-top: 32px; margin-bottom: 38px;">
