Enhance best sellers detection algorithm

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -269,7 +269,7 @@
 
                     <div>
                         <span id="product_category" class="badge rounded-pill bg-dark"></span>
-                        <span id="product_status" class="badge rounded-pill bg-warning text-dark">Selling out fast</span>
+                        <span id="product_status" class="badge rounded-pill bg-warning text-dark">Best seller</span>
                     </div>
 
                     <div class="col-md-12" style="margin-top: 32px; margin-bottom: 38px;">
