Add redirects to profile and cart buttons

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -200,7 +200,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="">Profile</a>
+                        <a class="nav-link" href="http://172.105.25.146:8081/404.html">Profile</a>
                     </li>
                 </ul>
 
@@ -236,12 +236,12 @@
                             Search
                         </button>
 
-                        <button class="btn btn-outline-dark d-flex align-items-center" style="margin-left: 8px;"
-                            type="submit" disabled>
+                        <a class="btn btn-outline-dark d-flex align-items-center" href="http://172.105.25.146:8081/404.html" style="margin-left: 8px;"
+                            type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
-                        </button>
+                        </a>
                     </form>
                 </div>
             </div>
