--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -255,7 +255,7 @@
                     <img id="product_image" class="shadow-sm rounded img-fluid w-100 fit-cover"
                         style="object-fit: contain; min-height: 300px; max-height: 512px;"></img>
                     <div style="max-width: 350;">
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi bi-star-fill" style="color: gold"></i>
                         <a id="product_rating"></a>
                     </div>
                 </div>
