Add wishlist button to navbar

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -242,6 +242,13 @@
                             Cart
                             <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </a>
+
+                        <a class="btn btn-outline-danger d-flex align-items-center" href="http://172.105.25.146:8081/404.html" style="margin-left: 8px;"
+                            type="submit">
+                            <i class="bi bi-heart-fill me-1"></i>
+                            Wishlist
+                            <span class="badge bg-danger text-white ms-1 rounded-pill">0</span>
+                        </a>
                     </form>
                 </div>
             </div>
