--- a/frontend/src/404.html
+++ b/frontend/src/404.html
@@ -36,14 +36,20 @@
             <p>no nearby islands nor communities, all alone in this page, there is nothing we can do..</p>
             <button class="btn btn-outline-dark mt-3" type="button" onclick="returnHome()">
                 <i class="bi bi-house-fill"></i>
-                Return home
+                <span id="buttonText"></span>
             </button>
         </div>
     </div>
 
     <script>
+        window.onload = function () {
+            var titles = ["Swim Back Home", "Escape the Island", "Start a Civilization", "Send a Message in a Bottle", "Summon a Rescue Helicopter", "Ride the Waves Home", "Catch the Next Coconut Boat"];
+            var randomTitle = titles[Math.floor(Math.random() * titles.length)];
+            document.querySelector('#buttonText').innerText = randomTitle;
+        }
+
         function returnHome() {
-            window.location.href = "index.html?page=1";
+            window.history.back();
         }
     </script>
 
