--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -188,7 +188,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="index.html?page=1">
+            <a id="Index" class="navbar-brand" href="index.html?page=1">
                 <img src="https://cdn.discordapp.com/attachments/885890290966216774/1180588710761332927/logo.png?ex=657df7ea&is=656b82ea&hm=c467734ce777b599d78e193431654cad15b490e846db9ceb284cc53ffdb913d7&" width="64">
             </a>
 
