--- a/frontend/src/product-search.html
+++ b/frontend/src/product-search.html
@@ -76,14 +76,13 @@
                             Search
                         </button>
 
-                        <a class="btn btn-outline-dark d-flex align-items-center" href="http://172.105.25.146:8081/404.html" style="margin-left: 8px;"
+                        <a id="CartButton" class="btn btn-outline-dark d-flex align-items-center" href="http://172.105.25.146:8081/404.html" style="margin-left: 8px;"
                             type="submit">
                             <i class="bi-cart-fill me-1"></i>
                             Cart
-                            <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
                         </a>
 
-                        <a class="btn btn-outline-danger d-flex align-items-center" href="http://172.105.25.146:8081/404.html" style="margin-left: 8px;"
+                        <a id="WishlistButton" class="btn btn-outline-danger d-flex align-items-center" href="http://172.105.25.146:8081/404.html" style="margin-left: 8px;"
                             type="submit">
                             <i class="bi bi-heart-fill me-1"></i>
                             Wishlist
