Integrate with profile module

--- a/frontend/src/detailed-view.html
+++ b/frontend/src/detailed-view.html
@@ -200,7 +200,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="http://172.105.25.146:8081/404.html">Profile</a>
+                        <a class="nav-link" href="http://39.106.68.52:8111/home/MenuPage">Profile</a>
                     </li>
                 </ul>
 
